--- a/lib/main.css
+++ b/lib/main.css
@@ -840,7 +840,7 @@ A HORIZONTAL event
     background-color: rgba(208, 208, 208, 0.3);
     background-color: var(--fc-neutral-bg-color, rgba(208, 208, 208, 0.3));
     color: #808080;
-    color: var(--fc-neutral-text-color, #808080);
+    color: var(--fc-neutral-text-color, #ffffff);
   }
 .fc {
 
