--- a/lib/main.css
+++ b/lib/main.css
@@ -1463,7 +1463,7 @@ A VERTICAL event
 
 
   .fc-theme-bootstrap a:not([href]) {
-    color: inherit; /* natural color for navlinks */
+    /* color: inherit; natural color for navlinks */
   }
 
 
