--- a/lib/main.css
+++ b/lib/main.css
@@ -294,6 +294,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
   }
 .fc .fc-toolbar-title {
     font-size: 1.75em;
+    color:#fff;
     margin: 0;
   }
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
