--- a/lib/main.css
+++ b/lib/main.css
@@ -88,7 +88,7 @@
 
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'fcicons' !important;
-  speak: none;
+  /* speak: none; */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
